# esp-32-home

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig
assets/: TECHNICAL_DOCS.md
main/: CMakeLists.txt  HttpClient.cpp  SensorData.cpp  Sht3x.cpp  TempTask.cpp  TimeSyncTask.cpp  UpdateTask.cpp  WifiConnectTask.cpp  app.cpp  hello_world_main.cpp  idf_component.yml
main/include/: EspHttpClientDeleter.h  HttpClient.h  SensorData.h  Sht3xTask.h  TempTask.h  TimeSyncTask.h  UpdateTask.h  WifiConnectTask.h  helpers.h
